add entities and config properties

--- a/src/main/resources/com/company/coffeeshop/messages_en.properties
+++ b/src/main/resources/com/company/coffeeshop/messages_en.properties
@@ -2,6 +2,37 @@ localeDisplayName.en=English
 
 databaseUniqueConstraintViolation.IDX_CS_USER_ON_USERNAME=A user with the same username already exists
 
+com.company.coffeeshop.entity/Address=Address
+com.company.coffeeshop.entity/Address.createdBy=Created by
+com.company.coffeeshop.entity/Address.createdDate=Created date
+com.company.coffeeshop.entity/Address.deletedBy=Deleted by
+com.company.coffeeshop.entity/Address.deletedDate=Deleted date
+com.company.coffeeshop.entity/Address.id=Id
+com.company.coffeeshop.entity/Customer=Customer
+com.company.coffeeshop.entity/Customer.createdBy=Created by
+com.company.coffeeshop.entity/Customer.createdDate=Created date
+com.company.coffeeshop.entity/Customer.id=Id
+com.company.coffeeshop.entity/Customer.lastModifiedBy=Last modified by
+com.company.coffeeshop.entity/Customer.lastModifiedDate=Last modified date
+com.company.coffeeshop.entity/Employee=Employee
+com.company.coffeeshop.entity/Employee.createdBy=Created by
+com.company.coffeeshop.entity/Employee.createdDate=Created date
+com.company.coffeeshop.entity/Employee.id=Id
+com.company.coffeeshop.entity/Employee.lastModifiedBy=Last modified by
+com.company.coffeeshop.entity/Employee.lastModifiedDate=Last modified date
+com.company.coffeeshop.entity/Employee.uuid=Uuid
+com.company.coffeeshop.entity/Item=Item
+com.company.coffeeshop.entity/Item.createdBy=Created by
+com.company.coffeeshop.entity/Item.createdDate=Created date
+com.company.coffeeshop.entity/Item.deletedBy=Deleted by
+com.company.coffeeshop.entity/Item.deletedDate=Deleted date
+com.company.coffeeshop.entity/Item.id=Id
+com.company.coffeeshop.entity/Order=Order
+com.company.coffeeshop.entity/Order.createdBy=Created by
+com.company.coffeeshop.entity/Order.createdDate=Created date
+com.company.coffeeshop.entity/Order.deletedBy=Deleted by
+com.company.coffeeshop.entity/Order.deletedDate=Deleted date
+com.company.coffeeshop.entity/Order.id=Id
 com.company.coffeeshop.entity/User=User
 com.company.coffeeshop.entity/User.active=Active
 com.company.coffeeshop.entity/User.email=Email
