add enum,service, properties and fix entities

--- a/src/main/resources/com/company/coffeeshop/messages_en.properties
+++ b/src/main/resources/com/company/coffeeshop/messages_en.properties
@@ -14,6 +14,8 @@ com.company.coffeeshop.entity/Customer.createdDate=Created date
 com.company.coffeeshop.entity/Customer.id=Id
 com.company.coffeeshop.entity/Customer.lastModifiedBy=Last modified by
 com.company.coffeeshop.entity/Customer.lastModifiedDate=Last modified date
+com.company.coffeeshop.entity/DeliveryEnum=Delivery enum
+com.company.coffeeshop.entity/EmpShiftEnum=Emp shift enum
 com.company.coffeeshop.entity/Employee=Employee
 com.company.coffeeshop.entity/Employee.createdBy=Created by
 com.company.coffeeshop.entity/Employee.createdDate=Created date
@@ -33,6 +35,7 @@ com.company.coffeeshop.entity/Order.createdDate=Created date
 com.company.coffeeshop.entity/Order.deletedBy=Deleted by
 com.company.coffeeshop.entity/Order.deletedDate=Deleted date
 com.company.coffeeshop.entity/Order.id=Id
+com.company.coffeeshop.entity/PaymentMethodEnum=Payment method enum
 com.company.coffeeshop.entity/User=User
 com.company.coffeeshop.entity/User.active=Active
 com.company.coffeeshop.entity/User.email=Email
@@ -65,4 +68,5 @@ com.company.coffeeshop.screen.user/additional=Additional
 com.company.coffeeshop.screen.user/confirmPassword=Confirm password
 com.company.coffeeshop.screen.user/passwordsDoNotMatch=Passwords do not match
 
+com.company.coffeeshop/Map=Map
 com.company.coffeeshop/menu.application=Application
