add exception, usermapper, userdto and fix entities relationship

--- a/src/main/resources/com/company/coffeeshop/messages_en.properties
+++ b/src/main/resources/com/company/coffeeshop/messages_en.properties
@@ -2,26 +2,47 @@ localeDisplayName.en=English
 
 databaseUniqueConstraintViolation.IDX_CS_USER_ON_USERNAME=A user with the same username already exists
 
-com.company.coffeeshop.entity/Address=Address
-com.company.coffeeshop.entity/Address.createdBy=Created by
-com.company.coffeeshop.entity/Address.createdDate=Created date
-com.company.coffeeshop.entity/Address.deletedBy=Deleted by
-com.company.coffeeshop.entity/Address.deletedDate=Deleted date
+com.company.coffeeshop.entity.user/User=User
+com.company.coffeeshop.entity.user/User.active=Active
+com.company.coffeeshop.entity.user/User.email=Email
+com.company.coffeeshop.entity.user/User.firstName=First name
+com.company.coffeeshop.entity.user/User.id=ID
+com.company.coffeeshop.entity.user/User.lastName=Last name
+com.company.coffeeshop.entity.user/User.password=Password
+com.company.coffeeshop.entity.user/User.timeZoneId=Time zone
+com.company.coffeeshop.entity.user/User.username=Username
+com.company.coffeeshop.entity.user/User.version=Version
+
 com.company.coffeeshop.entity/Address.id=Id
 com.company.coffeeshop.entity/Customer=Customer
 com.company.coffeeshop.entity/Customer.createdBy=Created by
 com.company.coffeeshop.entity/Customer.createdDate=Created date
+com.company.coffeeshop.entity/Customer.custAddress=Address
+com.company.coffeeshop.entity/Customer.custFirstName=First Name
+com.company.coffeeshop.entity/Customer.custId=Customer ID
+com.company.coffeeshop.entity/Customer.custLastName=Last Name
+com.company.coffeeshop.entity/Customer.custName=Customer Name
+com.company.coffeeshop.entity/Customer.custPhoneNum=Phone No
 com.company.coffeeshop.entity/Customer.id=Id
 com.company.coffeeshop.entity/Customer.lastModifiedBy=Last modified by
 com.company.coffeeshop.entity/Customer.lastModifiedDate=Last modified date
+com.company.coffeeshop.entity/Customer.paymentMethod=Payment Method
 com.company.coffeeshop.entity/DeliveryEnum=Delivery enum
 com.company.coffeeshop.entity/EmpShiftEnum=Emp shift enum
 com.company.coffeeshop.entity/Employee=Employee
 com.company.coffeeshop.entity/Employee.createdBy=Created by
 com.company.coffeeshop.entity/Employee.createdDate=Created date
+com.company.coffeeshop.entity/Employee.empFirstName=First Name
+com.company.coffeeshop.entity/Employee.empId=Emp.ID
+com.company.coffeeshop.entity/Employee.empLastName=Last Name
+com.company.coffeeshop.entity/Employee.empName=Full Name
+com.company.coffeeshop.entity/Employee.empPhoneNum=Phone No
+com.company.coffeeshop.entity/Employee.empPos=Position
+com.company.coffeeshop.entity/Employee.empShift=Shift
 com.company.coffeeshop.entity/Employee.id=Id
 com.company.coffeeshop.entity/Employee.lastModifiedBy=Last modified by
 com.company.coffeeshop.entity/Employee.lastModifiedDate=Last modified date
+com.company.coffeeshop.entity/Employee.monthlyWage=Monthly Wage
 com.company.coffeeshop.entity/Employee.uuid=Uuid
 com.company.coffeeshop.entity/Item=Item
 com.company.coffeeshop.entity/Item.createdBy=Created by
@@ -29,23 +50,58 @@ com.company.coffeeshop.entity/Item.createdDate=Created date
 com.company.coffeeshop.entity/Item.deletedBy=Deleted by
 com.company.coffeeshop.entity/Item.deletedDate=Deleted date
 com.company.coffeeshop.entity/Item.id=Id
+com.company.coffeeshop.entity/Item.item=Item
+com.company.coffeeshop.entity/Item.itemCat=Category
+com.company.coffeeshop.entity/Item.itemPrice=Price
+com.company.coffeeshop.entity/Item.itemSize=Size
+com.company.coffeeshop.entity/ItemTag=Item tag
+com.company.coffeeshop.entity/ItemTag.id=Id
+com.company.coffeeshop.entity/ItemTag.name=Name
 com.company.coffeeshop.entity/Order=Order
+com.company.coffeeshop.entity/Order.address=Address
 com.company.coffeeshop.entity/Order.createdBy=Created by
 com.company.coffeeshop.entity/Order.createdDate=Created date
+com.company.coffeeshop.entity/Order.customer=Customer
 com.company.coffeeshop.entity/Order.deletedBy=Deleted by
 com.company.coffeeshop.entity/Order.deletedDate=Deleted date
+com.company.coffeeshop.entity/Order.delivery=Delivery
+com.company.coffeeshop.entity/Order.employee=Employee
 com.company.coffeeshop.entity/Order.id=Id
+com.company.coffeeshop.entity/Order.itemSet=Order item set
+com.company.coffeeshop.entity/Order.items=Items
+com.company.coffeeshop.entity/Order.orderId=Order ID
+com.company.coffeeshop.entity/Order.totalPrice=Total Price
+com.company.coffeeshop.entity/Order.totalQuantity=Total Quantity
+com.company.coffeeshop.entity/Order.user=Employee
+com.company.coffeeshop.entity/OrderItemLink=Order item link
+com.company.coffeeshop.entity/OrderItemLink.id=Id
+com.company.coffeeshop.entity/OrderItemLink.item=Item
+com.company.coffeeshop.entity/OrderItemLink.itemSize=Size
+com.company.coffeeshop.entity/OrderItemLink.order=Order
+com.company.coffeeshop.entity/OrderItemLink.quantity=Quantity
 com.company.coffeeshop.entity/PaymentMethodEnum=Payment method enum
-com.company.coffeeshop.entity/User=User
-com.company.coffeeshop.entity/User.active=Active
-com.company.coffeeshop.entity/User.email=Email
-com.company.coffeeshop.entity/User.firstName=First name
-com.company.coffeeshop.entity/User.id=ID
-com.company.coffeeshop.entity/User.lastName=Last name
-com.company.coffeeshop.entity/User.password=Password
-com.company.coffeeshop.entity/User.timeZoneId=Time zone
-com.company.coffeeshop.entity/User.username=Username
-com.company.coffeeshop.entity/User.version=Version
+
+com.company.coffeeshop.enums/DeliveryEnum.DELIVERY=Delivery
+com.company.coffeeshop.enums/DeliveryEnum.DINEIN=Dine-in
+com.company.coffeeshop.enums/DeliveryEnum.TAKEOUT=Takeout
+com.company.coffeeshop.enums/EmpShiftEnum.EVENING=Evening
+com.company.coffeeshop.enums/EmpShiftEnum.MORNING=Morning
+com.company.coffeeshop.enums/ItemSizeEnum=Item size enum
+com.company.coffeeshop.enums/ItemSizeEnum.L=L
+com.company.coffeeshop.enums/ItemSizeEnum.M=M
+com.company.coffeeshop.enums/ItemSizeEnum.S=S
+com.company.coffeeshop.enums/PaymentMethodEnum.CARD=Card
+com.company.coffeeshop.enums/PaymentMethodEnum.CASH=Cash
+
+com.company.coffeeshop.screen.customer/customerBrowse.caption=Customers
+com.company.coffeeshop.screen.customer/customerBrowse.menu=Customers
+com.company.coffeeshop.screen.customer/customerEdit.caption=Customer editor
+
+com.company.coffeeshop.screen.item/itemBrowse.caption=Items
+com.company.coffeeshop.screen.item/itemBrowse.menu=Items
+com.company.coffeeshop.screen.item/itemEdit.caption=Item editor
+
+com.company.coffeeshop.screen.itemtag/itemTagEdit.caption=Item tag editor
 
 com.company.coffeeshop.screen.login/badCredentials = Unknown login name or bad password
 com.company.coffeeshop.screen.login/caption = Sample
@@ -57,16 +113,27 @@ com.company.coffeeshop.screen.login/passwordPlaceholder = Password
 com.company.coffeeshop.screen.login/usernamePlaceholder = User name
 com.company.coffeeshop.screen.login/welcomeLabel = Welcome to Coffeeshop application
 
-com.company.coffeeshop.screen.main/application.caption = Coffeeshop application
-com.company.coffeeshop.screen.main/application.logoLabel = Coffeeshop application
+com.company.coffeeshop.screen.main/application.caption = Coffee Shop application
+com.company.coffeeshop.screen.main/application.logoLabel = Coffee Shop application
 com.company.coffeeshop.screen.main/sideMenuCollapse = Collapse menu
 com.company.coffeeshop.screen.main/logoutBtnDescription = Logout
+
+com.company.coffeeshop.screen.order/createCustomer=Create
+com.company.coffeeshop.screen.order/orderBrowse.caption=Orders
+com.company.coffeeshop.screen.order/orderBrowse.menu=Orders
+com.company.coffeeshop.screen.order/orderEdit.caption=Order editor
+
+com.company.coffeeshop.screen.orderitemlink/orderItemLinkEdit.caption=Order item editor
 
 com.company.coffeeshop.screen.user/UserBrowse.caption=Users
 com.company.coffeeshop.screen.user/UserEdit.caption=User editor
 com.company.coffeeshop.screen.user/additional=Additional
 com.company.coffeeshop.screen.user/confirmPassword=Confirm password
 com.company.coffeeshop.screen.user/passwordsDoNotMatch=Passwords do not match
+com.company.coffeeshop.screen.user/userDTOBrowse.caption=User Management
+
+com.company.coffeeshop.screen.userdto/userDTOBrowse.caption=User Management
+com.company.coffeeshop.screen.userdto/userDTOBrowse.menu=User Management
 
 com.company.coffeeshop/Map=Map
 com.company.coffeeshop/menu.application=Application
