--- a/src/main/resources/com/company/coffeeshop/messages_en.properties
+++ b/src/main/resources/com/company/coffeeshop/messages_en.properties
@@ -2,6 +2,22 @@ localeDisplayName.en=English
 
 databaseUniqueConstraintViolation.IDX_CS_USER_ON_USERNAME=A user with the same username already exists
 
+com.company.coffeeshop.entity.user/Employee=Employee
+com.company.coffeeshop.entity.user/Employee.createdBy=Created by
+com.company.coffeeshop.entity.user/Employee.createdDate=Created date
+com.company.coffeeshop.entity.user/Employee.empFirstName=First Name
+com.company.coffeeshop.entity.user/Employee.empId=Emp.ID
+com.company.coffeeshop.entity.user/Employee.empLastName=Last Name
+com.company.coffeeshop.entity.user/Employee.empName=Full Name
+com.company.coffeeshop.entity.user/Employee.empPhoneNum=Phone No
+com.company.coffeeshop.entity.user/Employee.empPos=Position
+com.company.coffeeshop.entity.user/Employee.empShift=Shift
+com.company.coffeeshop.entity.user/Employee.id=Id
+com.company.coffeeshop.entity.user/Employee.lastModifiedBy=Last modified by
+com.company.coffeeshop.entity.user/Employee.lastModifiedDate=Last modified date
+com.company.coffeeshop.entity.user/Employee.monthlyWage=Monthly Wage
+com.company.coffeeshop.entity.user/Employee.uuid=Uuid
+com.company.coffeeshop.entity.user/EmployeeUser=Employee user
 com.company.coffeeshop.entity.user/User=User
 com.company.coffeeshop.entity.user/User.active=Active
 com.company.coffeeshop.entity.user/User.email=Email
@@ -12,6 +28,8 @@ com.company.coffeeshop.entity.user/User.password=Password
 com.company.coffeeshop.entity.user/User.timeZoneId=Time zone
 com.company.coffeeshop.entity.user/User.username=Username
 com.company.coffeeshop.entity.user/User.version=Version
+com.company.coffeeshop.entity.user/UserDTO.name=Name
+com.company.coffeeshop.entity.user/UserDTO.roles=Roles
 
 com.company.coffeeshop.entity/Address.id=Id
 com.company.coffeeshop.entity/Customer=Customer
@@ -29,21 +47,6 @@ com.company.coffeeshop.entity/Customer.lastModifiedDate=Last modified date
 com.company.coffeeshop.entity/Customer.paymentMethod=Payment Method
 com.company.coffeeshop.entity/DeliveryEnum=Delivery enum
 com.company.coffeeshop.entity/EmpShiftEnum=Emp shift enum
-com.company.coffeeshop.entity/Employee=Employee
-com.company.coffeeshop.entity/Employee.createdBy=Created by
-com.company.coffeeshop.entity/Employee.createdDate=Created date
-com.company.coffeeshop.entity/Employee.empFirstName=First Name
-com.company.coffeeshop.entity/Employee.empId=Emp.ID
-com.company.coffeeshop.entity/Employee.empLastName=Last Name
-com.company.coffeeshop.entity/Employee.empName=Full Name
-com.company.coffeeshop.entity/Employee.empPhoneNum=Phone No
-com.company.coffeeshop.entity/Employee.empPos=Position
-com.company.coffeeshop.entity/Employee.empShift=Shift
-com.company.coffeeshop.entity/Employee.id=Id
-com.company.coffeeshop.entity/Employee.lastModifiedBy=Last modified by
-com.company.coffeeshop.entity/Employee.lastModifiedDate=Last modified date
-com.company.coffeeshop.entity/Employee.monthlyWage=Monthly Wage
-com.company.coffeeshop.entity/Employee.uuid=Uuid
 com.company.coffeeshop.entity/Item=Item
 com.company.coffeeshop.entity/Item.createdBy=Created by
 com.company.coffeeshop.entity/Item.createdDate=Created date
@@ -97,6 +100,8 @@ com.company.coffeeshop.screen.customer/customerBrowse.caption=Customers
 com.company.coffeeshop.screen.customer/customerBrowse.menu=Customers
 com.company.coffeeshop.screen.customer/customerEdit.caption=Customer editor
 
+com.company.coffeeshop.screen.employee/employeeEdit.caption=Employee editor
+
 com.company.coffeeshop.screen.item/itemBrowse.caption=Items
 com.company.coffeeshop.screen.item/itemBrowse.menu=Items
 com.company.coffeeshop.screen.item/itemEdit.caption=Item editor
@@ -129,6 +134,10 @@ com.company.coffeeshop.screen.user/UserBrowse.caption=Users
 com.company.coffeeshop.screen.user/UserEdit.caption=User editor
 com.company.coffeeshop.screen.user/additional=Additional
 com.company.coffeeshop.screen.user/confirmPassword=Confirm password
+com.company.coffeeshop.screen.user/create=Create
+com.company.coffeeshop.screen.user/createCustomer=Create Customer
+com.company.coffeeshop.screen.user/createEmployee=Create Employee
+com.company.coffeeshop.screen.user/createUser=Create User
 com.company.coffeeshop.screen.user/passwordsDoNotMatch=Passwords do not match
 com.company.coffeeshop.screen.user/userDTOBrowse.caption=User Management
 
