--- a/src/main/resources/com/company/coffeeshop/messages_en.properties
+++ b/src/main/resources/com/company/coffeeshop/messages_en.properties
@@ -57,6 +57,7 @@ com.company.coffeeshop.entity/Item.item=Item
 com.company.coffeeshop.entity/Item.itemCat=Category
 com.company.coffeeshop.entity/Item.itemPrice=Price
 com.company.coffeeshop.entity/Item.itemSize=Size
+com.company.coffeeshop.entity/Item.tags=Tags
 com.company.coffeeshop.entity/ItemTag=Item tag
 com.company.coffeeshop.entity/ItemTag.id=Id
 com.company.coffeeshop.entity/ItemTag.name=Name
